<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="369dp"
        android:layout_height="479dp"
        android:layout_gravity="center"
        android:weightSum="1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/welcome_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgLogo"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/txtName"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtWelcome"
            android:id="@+id/txtWelcome"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:textStyle="normal|italic" />

        <TextView
            android:layout_width="317dp"
            android:layout_height="277dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtDescription_welcome"
            android:id="@+id/txtDescription"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textStyle="italic" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/btnOK"
            android:id="@+id/btnEntendi"
            android:layout_gravity="center_horizontal|bottom"
            android:background="#028fc9"
            android:textColor="#ffffff"
            android:textStyle="bold|italic" />
    </LinearLayout>



</FrameLayout>